Reorganizando estruturas da api

--- a/BangNews.Api/appsettings.json
+++ b/BangNews.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=BangNewsDB;Integrated Security=True"
+  }
 }
