--- a/BangNews.Api/appsettings.json
+++ b/BangNews.Api/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=BangNewsDB;Integrated Security=True"
+    //"DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=BangNewsDB;Integrated Security=True",
+    "DefaultConnection": "Server=den1.mssql8.gear.host;Database=bangnewsdb;User Id=bangnewsdb; Password=Bc7!~f3HyomB;"
   }
 }
