Update to .Net 6.0

--- a/BangNews.Api/appsettings.json
+++ b/BangNews.Api/appsettings.json
@@ -6,7 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=BangNewsDB;Integrated Security=True",
-    "DefaultConnection": "Server=den1.mssql8.gear.host;Database=bangnewsdb;User Id=bangnewsdb; Password=Bc7!~f3HyomB;"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=BangNewsDB;Integrated Security=True",
   }
 }
