--- a/BangNews.App/package.json
+++ b/BangNews.App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noticiasApp",
+  "name": "noticias-app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
